# CoCoA

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac
data/a1a.4/: a1a.1.0  a1a.4.1  a1a.4.2  a1a.4.3
src/: Context.h  Makefile.am  Makefile.in  cocoa  cocoa.cpp  cocoaHelper.h  cocoaHelper_right.h
src/class/: HingeLoss.h  HingeLossCD.h  HingeLossCDCaseC.h  HingeLossMatlab.h  LogisticLoss.h  LogisticLossCD.h  LogisticLossMatlab.h  LossFunction.h  QuadraticLoss.h  QuadraticLossCD.h  QuadraticLossLbfgs.h  SquareHingeLossCD.h  SquaredHingeLoss.h
src/helpers/: c_libs_headers.h  matrix_conversions.h  option_console_parser.h  option_distributed_console_parser.h  utils.h
src/parallel/: parallel_essentials.h  parallel_essentials_posix.h
src/solver/: AbstractEngineExecutor.h  ClusterApproxEngineExecutor.h  ClusterEngineExecutor.h  MulticoreEngineExecutor.h  Solver.h  settingsAndStatistics.h  structures.h  treshhold_functions.h
src/solver/distributed/: data_distributor.h  data_distributor_hypergraph.h  distributed_asynchronous.h  distributed_asynchronous_topologies.h  distributed_asynchronous_topology_abstract.h  distributed_asynchronous_topology_torus1.h  distributed_common.h  distributed_essentials.h  distributed_include.h  distributed_solver.h  distributed_structures.h  distributed_svm.h  distributed_synchronous.h  distributed_synchronous_schema.h
src/solver/lossFunctions/: AbstractLoss.h  approxClusterLossFunctions.h  clusterLossFunctions.h  multicoreLossFunctions.h
src/solver/lossFunctions/SVMDualLoss/: ApproxClusterSVMDualLoss.h  ClusterSVMDualLoss.h  MulticoreSVMDualLoss.h  SVMDualLoss.h
src/solver/lossFunctions/logisticLoss/: LogisticLoss.h  MulticoreL2SquareRegLogisticLoss.h  MulticoreLogisticLoss.h
src/solver/lossFunctions/squareLoss/: ApproxClusterL1ReqSquareLoss.h  ClusterL1ReqSquareLoss.h  ClusterL2SquareReqSquareLoss.h  ClusterSquareLoss.h  MulticoreL1RegSquareLoss.h  MulticoreL2SquareRegSquareLoss.h  MulticoreSquareLoss.h  SquareLoss.h
src/solver/matrixCompletion/parallel/: parallel_mc_opemmp.h  parallel_mc_opemmp_extended.h  solveMCProblemCUDA.h
src/solver/matrixCompletion/serial/: solveMCProblem.h  solveMCProblemByAdditiveLayer.h
src/svm/: classifier_testing.h  parseinputs.h  svm_parser.h
src/utils/: csv_writter.h  data_loader.h  distributed_instances_loader.h  file_reader.h  largeScaleExperiment.h  matrixvector.h  my_cblas_wrapper.h  randomNumbersUtil.h
